src/preprocessor/snapshots/eremius__preprocessor__tests__label_adrl_example.snap
---
source: src/preprocessor/tests.rs
expression: result
---
Ok(
    PreProcessResult {
        statements: [
            (
                0,
                PseudoInstruction {
                    kind: LoadRegisterConstant {
                        condition: AL,
                        destination: Rd(
                            15,
                        ),
                        value: Symbol(
                            Symbol(
                                "func",
                            ),
                        ),
                    },
                },
            ),
        ],
        symbol_table: SymbolTable {
            table: {
                Symbol(
                    "func",
                ): Number {
                    base: 10,
                    n: 0,
                },
            },
        },
        entry_point: 0,
        source_map: {
            0: 1,
        },
    },
)
